--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -195,7 +195,8 @@ jobs:
           # Выполняет миграции и сбор статики
           sudo docker compose -f docker-compose.production.yml exec backend python manage.py migrate
           sudo docker compose -f docker-compose.production.yml exec backend python manage.py collectstatic
-          sudo docker compose -f docker-compose.production.yml exec backend cp -r /app/collected_static/. /backend_static/static/ 
+          sudo docker compose -f docker-compose.production.yml exec backend cp -r /app/collected_static/. /backend_static/static/           
+          sudo docker compose -f docker-compose.production.yml exec backend python manage.py createsuperuser --noinput  --username ${{ secrets.DJANGO_SUPERUSER_USERNAME }} --email ${{ secrets.DJANGO_SUPERUSER_EMAIL }}
 
   send_message:
     runs-on: ubuntu-latest
@@ -206,4 +207,4 @@ jobs:
       with:
         to: ${{ secrets.TELEGRAM_TO }}
         token: ${{ secrets.TELEGRAM_TOKEN }}
-        message: Деплой успешно выполнен! 
+        message: Деплой Taski успешно выполнен! 
