--- a/gateway/nginx.conf
+++ b/gateway/nginx.conf
@@ -1,7 +1,7 @@
 # Файл nginx.conf
 server {
   # Указание серверу: слушай порт контейнера 80
-  listen 80;
+  listen 80 default_server;
 
   # Запросы по адресам /api/... перенаправляй в контейнер backend
   location /api/ {
@@ -31,5 +31,6 @@ server {
     # Если в запросе не указано, какой файл вернуть, 
     # возвращай файл index.html — он есть в папке со статикой
     index index.html;
+    try_files $uri $uri/ =404;
   }
 }
