--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -196,7 +196,7 @@ jobs:
           sudo docker compose -f docker-compose.production.yml exec backend python manage.py migrate
           sudo docker compose -f docker-compose.production.yml exec backend python manage.py collectstatic
           sudo docker compose -f docker-compose.production.yml exec backend cp -r /app/collected_static/. /backend_static/static/           
-          sudo docker compose -f docker-compose.production.yml exec backend python manage.py createsuperuser --noinput  --username ${{ secrets.DJANGO_SUPERUSER_USERNAME }} --email ${{ secrets.DJANGO_SUPERUSER_EMAIL }}
+          # sudo docker compose -f docker-compose.production.yml exec backend python manage.py createsuperuser --noinput  --username ${{ secrets.DJANGO_SUPERUSER_USERNAME }} --email ${{ secrets.DJANGO_SUPERUSER_EMAIL }}
 
   send_message:
     runs-on: ubuntu-latest
