--- a/docker-compose.production.yml
+++ b/docker-compose.production.yml
@@ -21,7 +21,7 @@ services:
     expose:
       - "5432"
     healthcheck:
-      test: ["CMD", "pg_isready", "-U", "postgres"]
+      test: ["CMD", "pg_isready", "-d", "django", "-U", "django_user"]
       interval: 1s
       timeout: 1s
       retries: 60
