--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,7 +25,7 @@ services:
     expose:
       - "5432"
     healthcheck:
-      test: ["CMD", "pg_isready", "-U", "django_user"]
+      test: ["CMD", "pg_isready", "-d", "django", "-U", "django_user"]
       interval: 1s
       timeout: 1s
       retries: 60
