--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -23,6 +23,8 @@ RUN pip install -r requirements.txt --no-cache-dir
 # в текущую рабочую директорию образа — /app.
 COPY . .
 
+RUN --mount=type=secret,id=SECRET_KEY export SECRET_KEY=$(cat /run/secrets/SECRET_KEY) 
+
 # RUN python3 manage.py migrate
 # docker exec taski_backend_container python manage.py migrate
 
