--- a/docker-compose.production.yml
+++ b/docker-compose.production.yml
@@ -57,6 +57,8 @@ services:
         # порт_хоста:порт_контейнера
     networks:
       common_ydx_network:
+    depends_on:
+      - backend
 
 # Запускать: docker compose -f docker-compose.production.yml up 
 
