--- a/docker-compose.production.yml
+++ b/docker-compose.production.yml
@@ -18,10 +18,9 @@ services:
       - pg_data_production:/var/lib/postgresql/data
     networks:
       common_ydx_network:
-    expose:
-      - "5432"
+      # порт_хоста:порт_контейнера
     healthcheck:
-      test: ["CMD", "pg_isready", "-d", "django", "-U", "django_user"]
+      test: ["CMD", "pg_isready", "-d", "${POSTGRES_DB}", "-U", "${POSTGRES_USER}"]
       interval: 1s
       timeout: 1s
       retries: 60
@@ -53,7 +52,7 @@ services:
     volumes:
       - static_volume:/staticfiles/
     ports:
-      - 8000:80 
+      - "8000:80"
         # порт_хоста:порт_контейнера
     networks:
       common_ydx_network:
